Edit Count Input Validation, And Add Date, Time, GeoLocation

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             </div>
             <div class="form-group">
               <label for="formGroupExampleInput2">Count</label>
-              <input type="number" class="form-control" id="count-input" placeholder="Count">
+              <input type="number" class="form-control" id="count-input" placeholder="Count"/>
               <span class="err-msg count-err-msg"></span>
             </div>
 
@@ -121,6 +121,10 @@
           <button onclick="show_storage();" type="button" class="btn btn-info show-info-btn">
             Show
           </button>
+
+          <div class="time-and-location">
+            <div style="text-align:center;padding:1em 0;"> <h2><a style="text-decoration:none;" href="https://www.zeitverschiebung.net/en/city/250441"><span style="color:gray;">Current local time in</span><br />Amman, Jordan</a></h2> <iframe src="https://www.zeitverschiebung.net/clock-widget-iframe-v2?language=en&size=large&timezone=Asia%2FAmman" width="100%" height="140" frameborder="0" seamless></iframe> </div>
+          </div>
 
           <table class="table table-dark table-striped">
             <thead class="table-header">
