--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
               <select id="allergies" class="form-control">
                 <option value="None">None</option>
                 <option value="Dairy Free">Dairy Free</option>
-                <option value="Not Free">Not Free</option>
+                <option value="Not Free">Nut Free</option>
               </select>
               <span class="err-msg allergies-err-msg"></span>
             </div>
